# MMSG

./: .env.example  .gitignore  README.md  pyproject.toml
eval/longmemeval/: config.py  dataset.py  ingest.py  metrics.py  report.py  run.py  runner.py
eval/mcp/: run.py  server.py
eval/personamem/: __init__.py  answer.py  config.py  dataset.py  grader.py  ingest.py  report.py  run.py  runner.py  smoke_test.py
handbook/: architecture.md  curiosity-note-redesign.md  loop-run.md  mcp-integration.md  memory-flow.md  memory-three-layers-design.md  naming-cleanup.md  pending-architecture.md  portrait-collection.md  proactive-design.md  recall-design.md  recall-eval-design.md  what-i-built.md  write-paths.md
knowledge/openclaw/: memory-mechanism.md  multi-agent-report.md
mmsg/: __init__.py  __main__.py  app.py  common.py  config.py
mmsg/agent/: context.py  loop.py
mmsg/agent/reason/: __init__.py  engine.py
mmsg/bus/: agent.py  eventbus.py  message.py  messagebus.py
mmsg/channel/: __init__.py  feishu.py  qqbot.py
mmsg/core/: __init__.py  bus.py  events.py  plugin.py  tracing.py
mmsg/dashboard/: __init__.py  api.py
mmsg/llm/: __init__.py  base.py  embedding.py  openai_provider.py
mmsg/memory/: __init__.py  base.py  fact.py  factory.py  protocol.py  recall.py  record.py  templates.py  working.py
mmsg/observability/: __init__.py  console_sink.py
mmsg/proactive/: __init__.py  ask_store.py  decision.py  engine.py  notes.py  portrait.py  prompts.py
mmsg/prompt/: __init__.py
mmsg/router/: __init__.py  router.py
mmsg/storage/: __init__.py  _sessions.py  _state.py  _usage.py  models.py  recorder.py  schema.py  sqlite.py
mmsg/tools/: __init__.py  base.py  echo.py  files.py  http.py  permission.py
mmsg/transport/: __init__.py  client.py  server.py
mmsg/ui/: cli.py
(+37 files in other folders)
