[project]
name = "mmsg"
version = "0.0.1"
description = "Personal agent orchestration: bus + observability + layered memory + plugins"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mmsg*"]
