[project]
name = "mmsg"
version = "0.0.1"
description = "Personal agent orchestration: bus + observability + layered memory + plugins"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "textual>=0.80",
]

[project.optional-dependencies]
qqbot = ["websockets>=13.0"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.27"]
all = ["websockets>=13.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mmsg*"]

[project.scripts]
mmsg = "mmsg.__main__:main"
