[project]
name = "mmsg"
version = "0.0.1"
description = "Personal agent orchestration: bus + observability + layered memory + plugins"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "jieba>=0.42",
    "pydantic>=2.6",
    "sqlite-vec>=0.1",
    "textual>=0.80",
]

[project.optional-dependencies]
qqbot = ["websockets>=13.0"]
feishu = ["lark-oapi>=1.4.0"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.27"]
eval = ["datasets>=2.0", "huggingface_hub", "jsonlines>=4.0"]
all = ["websockets>=13.0", "lark-oapi>=1.4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mmsg*"]

[project.scripts]
mmsg = "mmsg.__main__:main"
